index.css
/* region Variables, Base, & Reset */

:root {
    --primary-black: #0a0a0a;
    --secondary-black: #171717;
    --primary-white: #fafafa;
    --secondary-white: #f5f5f5;

    --font-heading: "Figtree", sans-serif;
    --font-primary: "Open Sans", sans-serif;

    /*--spacing-xs: 0.25em;*/
    /*--spacing-sm: 0.5em;*/
    /*--spacing-md: 1em;*/
    /*--spacing-lg: 1.25em;*/
    /*--spacing-xl: 1.875em;*/
    --spacing-xxl: 3.125em;
}

*,
*::after,
*::before {
    box-sizing: border-box;
}

html {
    scrollbar-width: none;
}

body {
    margin: 0;
    padding: 0;
    -ms-overflow-style: none;
    font-family: var(--font-primary);
    color: var(--primary-white);
    background-color: var(--primary-black);
    letter-spacing: 0.02em;
}

h1, h2 {
    font-family: var(--font-heading);
    font-weight: 600;
    color: var(--primary-white);
    letter-spacing: 0.03em;
    line-height: 0.95;
}

p {
    font-family: var(--font-primary);
    font-weight: 400;
    color: var(--secondary-white);
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

a {
    text-decoration: none;
}

::-webkit-scrollbar {
    display: none;
}

/* endregion */

/* region Utility */

#smooth-wrapper {
    overflow: hidden;
}

#smooth-content {
    will-change: transform;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.section-container,
.temp-section-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: var(--spacing-xxl) 0;
}

.temp-section-container {
    height: 1000px;
}

/* endregion */

/* region Loading Screen */

body.loading-active {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

body.loading-active .custom-scrollbar {
    display: none;
}

#loading-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: var(--primary-black);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10000;
    opacity: 1;
    transition: opacity 0.5s ease-out;
    will-change: opacity;
}

#loading-animation {
    width: min(130vw, 1080px);
    height: auto;
    opacity: 1;
    transition: opacity 0.3s ease-out;
    will-change: opacity;
    pointer-events: none;
    mix-blend-mode: screen;
}

#loading-container.loading-fade-out {
    opacity: 0;
    pointer-events: none;
}

#loading-animation.loading-fade-out {
    opacity: 0;
}

/* endregion */

/* region Custom Scrollbar */

.custom-scrollbar {
    position: fixed;
    top: 0;
    right: 4px;
    width: 10px;
    height: 100vh;
    z-index: 10001;
    pointer-events: auto;
    opacity: 0;
    transition: opacity 0.3s ease;
    cursor: pointer;
    padding: 2px;
}

.custom-scrollbar.visible,
.custom-scrollbar:hover {
    opacity: 1;
}

.custom-scrollbar-track {
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: transparent;
    opacity: 0;
}

.custom-scrollbar:hover .custom-scrollbar-track {
    opacity: 1;
}

.custom-scrollbar-thumb {
    position: absolute;
    right: 2px;
    width: 8px;
    background: rgb(250, 250, 250, 0.1);
    border-radius: 4px;
    transition: background 0.3s ease,
    width 0.3s ease,
    right 0.3s ease;
    cursor: grab;
    min-height: 30px;
}

.custom-scrollbar-thumb:hover {
    background: rgb(250, 250, 250, 0.2);
    width: 10px;
    right: 1px;
}

.custom-scrollbar-thumb:active,
.custom-scrollbar-thumb.dragging {
    background: rgba(250, 250, 250, 0.2);
    cursor: grabbing;
}

/* endregion */

/* region Typography */

.hero-title {
    margin: 0;
    font-size: clamp(5rem, 9.8vw, 9.375rem);
    cursor: default;
}

.hero-subtitle {
    margin: 1rem 0 0 0;
    font-size: clamp(1.25rem, 3.15vw, 2.5rem);
    font-family: var(--font-primary);
    font-weight: 400;
    color: var(--secondary-white);
    line-height: normal;
    cursor: default;
}

.about-header {
    margin: 0;
    width: 90vw;
    font-size: clamp(4.375rem, 7.9vw, 7.5rem);
    text-align: center;
}

.about-p {
    margin: 2rem 0 0 0;
    width: min(75vw, 1150px);
    font-size: clamp(1rem, 2vw, 1.875rem);
    text-align: justify;
}

/* endregion */

/* region Header & Nav */

#header {
    position: fixed;
    padding: 1.25rem 0;
    z-index: 3;
    width: 100vw;
    isolation: isolate;
}

#header.header-auto-hide {
    transition: opacity 0.5s ease;
}

#header.header-auto-hide.header-hidden {
    opacity: 0;
}

#header.blend-mode {
    mix-blend-mode: difference;
    transition: mix-blend-mode 0.3s ease;
}

.header-container {
    margin: 0 8vw;
    justify-content: space-between;
}

.header-logo {
    height: 6.25rem;
}

/* Nav */
.header-nav-list {
    display: flex;
    flex-direction: column;
    padding-right: 0.5rem;
    gap: 0.625rem;
}

.header-nav-item {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 0.32rem;
    transition: all 0.4s ease;
}

.header-nav-link {
    color: var(--primary-white);
    opacity: 0.7;
    transition: opacity 0.3s ease, mix-blend-mode 0.3s ease;
}

.header-nav-link:hover,
.active-nav {
    opacity: 1;
}

/* Nav arrows */
.nav-arrow-canvas {
    width: 30px;
    height: 10px;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.4s ease, opacity 0.4s ease;
}

.header-nav-item:hover .nav-arrow-canvas,
.header-nav-item .nav-arrow-canvas.active-icon {
    visibility: visible;
    opacity: 1;
}

.header-nav-item:hover:not(.active-nav-item) .nav-arrow-canvas {
    opacity: 0.6;
}

/* endregion */

/* region Hero Section */

#hero {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

#hero-three-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 110vh;
    z-index: 0;
    overflow: hidden;
}

/* TODO: Fix the visual bug of the bottom */
#hero-three-container::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 80px;
    z-index: 2;
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0) 0%,
        rgba(10, 10, 10, 0.8) 100%
    );
}

.hero-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    z-index: 1;
    text-align: center;
}

#skip-link {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0.5rem;
    margin: 0;
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--secondary-white);
    text-decoration: none;
    cursor: default;
    order: -1;
}

.skip-text {
    margin: 0;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.3s ease;
}

#skip-link:focus .skip-text {
    visibility: visible;
    opacity: 1;
}

.hero-arrow-canvas {
    width: 100px;
    height: 100px;
    opacity: 0.7;
    overflow: hidden;
}

/* endregion */

/* region About Section */

#about {
    padding-top: 6em;
}

#about-three-container {
    position: relative;
    width: 100%;
    height: 100vh;
    z-index: 0;
}

#about-three-container::before,
#about-three-container::after {
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    height: 150px;
    z-index: 2;
}

#about-three-container::before {
    top: 0;
    background: linear-gradient(
        to top,
        rgba(0, 0, 0, 0) 0%,
        var(--primary-black) 100%
    );
}

#about-three-container::after {
    bottom: 0;
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0) 0%,
        var(--primary-black) 100%
    );
}

.words-container {
    overflow: hidden;
    position: relative;
    top: -82vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 3rem;
    z-index: 1;
}

.about-words * {
    will-change: transform, opacity;
}

.about-words {
    font-family: var(--font-heading);
    font-size: 3.75rem;
    font-weight: 600;
    color: var(--primary-white);
    letter-spacing: 0.03em;
    white-space: nowrap;
    margin: 0;
    word-spacing: 50px;
    cursor: default;
}

.words-line-wrapper {
    position: relative;
    height: 5rem;
    overflow: hidden;
    width: 100%;
}

/* TODO: Figure out better positioning w/out vh */
#about-container {
    position: relative;
    top: -133vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 2;
    margin: 0 auto;
}

/* endregion */

/* region Glass Card */

#draggable-card {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    color: #fafafa;
    padding: 5em 10em;
    border-radius: 16px;
    cursor: grab;
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
}

#draggable-card.dragging {
    cursor: grabbing;
}

/*.glass-card {*/
/*    transition: opacity 0.26s ease-out;*/
/*    --fx-filter: blur(2px) contrast(1.2) liquid-glass(2, 10, 0.5) drop-shadow(-8px -10px 46px #0000005f);*/
/*}*/

/*.glass-card::before {*/
/*    content: "";*/
/*    position: absolute;*/
/*    inset: 0;*/
/*    z-index: 0;*/
/*    overflow: hidden;*/
/*    border-radius: 16px;*/
/*    box-shadow: inset 0 0 2px 1px rgba(255, 255, 255, 0.2);*/
/*}*/

/* endregion */

